--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <script>
     window.pWidthMobileScreen = 90;
   </script>
-  <script src="/Users/thaonguyen/Documents/trongthao_freelancer/Masoffer-Popup-Script/public/js/index.min.js">
+  <script src="./public/js/index.min.js">
   </script>
   <!-- Hoặc -->
   <!-- <script src="YOUR_PATH/public/js/index.min.js"></script> -->
